# dsg-compliance-engine

./: .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  SELF-ASSESSMENT-CHECKLIST.md  cli.py  pyproject.toml
.github/workflows/: publish-walkthrough.yml
artifacts/: audit.json  audit.md  bom.json  run_state.json  ssp.md
artifacts/registry/: index.json
attestations/: tier1.jsonl
docs/: ACCEPTANCE.md  ARCHITECTURE.md  AS-BUILT.md  AUDITOR-GUIDE.md  COVERAGE.md  KNOWN-ISSUES.md  ROADMAP.md  SOP.md
documents/: ssp.py
evidence/: binding.py
notebooks/: README.md  _engine.py  _interrogate.py  _new_cells.py  _viz.py  compliance_walkthrough.py
ontology/: ce-attestation-refs.ttl  cmmc-edit.ttl  cmmc_shapes.ttl
oracles/: assertion.py  attested_reference.py  criteria.py  freshness.py
order-compiler/: clause_library.py  obligations.ttl  rule_library.py
output/: audit.json  audit.md  run_state.json
pipeline/: runner.py
structural/: references.ttl  tier1.ttl
tests/: test_attestation_gsn.py  test_attested_reference.py  test_audit.py  test_bom.py  test_clause_library.py  test_cli.py  test_cmmc_ontology_parse.py  test_evidence_binding.py  test_flexo_wiring.py  test_generators.py  test_notebook_smoke.py  test_nv012_e2e.py  test_oracles.py  test_override_evidence.py  test_package.py  test_pipeline.py  test_registry.py  test_report.py  test_residency_gate.py  test_rule_library.py  test_shacl_closure.py  test_signing_attestations.py  test_ssp.py  test_structural.py  test_verification_shapes.py
traceability/: attestation.py  attestation_store.py  bom.py
(+69 files in other folders)
