[project]
name = "compliance-engine"
version = "0.0.0"
description = "CMMC L2 / IL5 / ITAR compliance engine on a requirements-traceability substrate"
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.31.0",
    "pydantic>=2.0",
    "typer>=0.12,<1.0",
    "httpx>=0.28.1",
    "cryptography>=42.0",
]

[project.scripts]
ce = "compliance_engine.cli:main"
compliance-engine = "compliance_engine.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
notebook = [
    "marimo>=0.9",
    "matplotlib>=3.9",
    "networkx>=3.3",
]

[tool.pytest.ini_options]
# src layout: package lives under src/compliance_engine/
pythonpath = ["src", "."]
addopts = "-m 'not live and not network'"
markers = [
    "live: opt-in tests that hit live services",
    "network: opt-in tests that fetch over the network",
    "terraform: tests that invoke the terraform binary; skip when absent",
]
filterwarnings = [
    # rdflib's own TriG serializer + query path still call the deprecated
    # Dataset.default_context/.contexts internally (rdflib graph.py/trig.py) —
    # not actionable in our code; silence the third-party noise so the suite
    # output stays readable. Re-check on rdflib upgrades.
    "ignore:Dataset.default_context is deprecated:DeprecationWarning",
    "ignore:Dataset.contexts is deprecated:DeprecationWarning",
]
